...
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/btn_mas_proximas_primero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Más próximas primero" />

            <RadioButton
                android:id="@+id/btn_menos_proximas_primero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Menos próximas primero" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />

...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:text="CANCELAR"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ordenar_aplicar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:paddingTop="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:text="APLICAR"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
...
