...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_event_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginTextView"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_weight="1"
            android:text="TextView"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginTextView"
            android:layout_marginTop="@dimen/marginTextView"
            android:layout_weight="1"
            android:text="TextView" />
...
