...
    <item
        android:id="@+id/menu_filter_date"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_filter_date"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/menu_reload"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_info"
        android:title="@string/menu_info" />
...
